# uhalifu-api

./: .gitignore  README.md  pyproject.toml  terrorism.ipynb
app/: __init__.py
app/core/: config.py  database.py
app/models/: __init__.py  base.py  locations.py
app/routers/: location.py
app/schemas/: __init__.py  location_schema.py
app/services/: __init__.py  location_service.py
scripts/: data.py  geocode.py  logger.py  main.py
