[project]
name = "terrorism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.1",
    "loguru>=0.7.3",
    "notebook>=7.5.1",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "voila>=0.5.11",
]
